# Smart-Contract

./: .env.example  .env.local  .gitignore  Cargo.toml  README.MD  diesel.toml
.github/: pull_request_template.md
docs/: CONTRIBUTORS_GUIDELINE.md  GIT_GUIDELINE.md
src/: config.rs  main.rs  schema.rs
src/models/: escrow.rs  mod.rs  wallet.rs
src/routes/: escrow.rs  health.rs  mod.rs  wallet_routes.rs
src/services/: escrow.rs  mod.rs
src/tests/: escrow_tests.rs  mod.rs  wallet_tests.rs
