[package]
name = "trustbridge-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
dotenvy = "0.15"
log = "0.4"
pretty_env_logger = "0.5"
reqwest = { version = "0.11", features = ["json"] }
jwt = "0.16"

[dev-dependencies]
mockito = "0.31"